--- a/views/highlights.mustache
+++ b/views/highlights.mustache
@@ -17,7 +17,8 @@
                             <div class="card-body">
                                 <h5 class="card-title">Add New Highlight</h5>
                                 <div class="input-group input-group-lg">
-                                    <textarea id="highlight" class="form-control  form-control-lg" placeholder="Highlight"
+                                    <textarea id="highlight" class="form-control  form-control-lg"
+                                              placeholder="Highlight"
                                               rows="2"></textarea>
                                 </div>
                                 <br>
@@ -42,7 +43,9 @@
 
                     <div>
                         {{#headerTags}}
-                            <a href="/highlights?tag={{tag}}" class="badge badge-{{badge}}"><h5>{{tag}}</h5></a>
+                            <a role="button" href="/highlights?tag={{tag}}" class="badge badge-{{badge}}">
+                            <strong>#{{tag}}</strong>
+                            </a>
                         {{/headerTags}}
                     </div>
 
@@ -54,10 +57,13 @@
                                 <div class="card-header bg-dark">
                                     {{#tags}}{{{tag}}}{{/tags}}
                                     {{^tags}}{{author}}{{/tags}}
+
+                                    <a role="button" href="/highlights/{{id}}/details"
+                                       class="badge badge-primary float-right">details</a>
                                 </div>
                                 <div class="card-body">
                                     <blockquote class="blockquote mb-0">
-                                        <p>{{{highlight}}}</p>
+                                        <p>{{{html}}}</p>
                                         <footer class="blockquote-footer">{{author}} <cite
                                                 title="Source Title">{{source}}</cite>
                                         </footer>
@@ -73,7 +79,6 @@
     </main> <!-- main -->
 </div> <!-- .wrapper -->
 {{> include}}
-{{> add-book }}
 <script>
     $(document).ready(function () {
         $('.enterButtonKeyPress').bind('keypress', function (e) {
@@ -84,20 +89,12 @@
                 var page = $('#page').val();
                 var link = $('#link').val();
                 var tags = $('#tags').val();
+                var data = "highlight=" + encodeURIComponent(highlight) + "&author=" + encodeURIComponent(author) + "&source=" + encodeURIComponent(source) + "&page=" + encodeURIComponent(page) + "&link=" + encodeURIComponent(link) + "&tags=" + encodeURIComponent(tags);
+                var result = ajaxCall('POST', "/highlights", data)
 
-                $.ajax({
-                    type: "POST",
-                    data: "highlight=" + encodeURIComponent(highlight) + "&author=" + encodeURIComponent(author) + "&source=" + encodeURIComponent(source) + "&page=" + encodeURIComponent(page) + "&link=" + encodeURIComponent(link) + "&tags=" + encodeURIComponent(tags),
-                    url: "/highlights",
-                    success: function () {
-                        alert("success");
-                        location.reload();
-                    },
-                    error: function () {
-                        alert("error");
-                    }
-                });
-
+                if (result !== false) {
+                    location.reload();
+                }
             }
         });
     });
