--- a/views/include/menu.mustache
+++ b/views/include/menu.mustache
@@ -32,18 +32,21 @@
                 <a href="/all-books" class="nav-link">
                     <i class="fe fe-book-open fe-16"></i>
                     <span class="ml-3 item-text">All Books</span>
+                    <span id="allBooksBadgeCount" class="badge badge-pill badge-warning">6</span>
                 </a>
             </li>
             <li class="nav-item dropdown {{activeMyBooks}}">
                 <a href="/my-books" class="nav-link">
                     <i class="fe fe-book fe-16"></i>
                     <span class="ml-3 item-text">My Books</span>
+                    <span id="myBooksBadgeCount" class="badge badge-pill badge-warning">6</span>
                 </a>
             </li>
             <li class="nav-item dropdown {{activeFinished}}">
                 <a href="/books/finished" class="nav-link">
                     <i class="fe fe-archive fe-16"></i>
                     <span class="ml-3 item-text">Finished</span>
+                    <span id="finishedBooksBadgeCount" class="badge badge-pill badge-warning">6</span>
                 </a>
             </li>
             <li class="nav-item dropdown {{activeCategories}}">
@@ -62,6 +65,7 @@
                 <a href="/bookmarks" class="nav-link">
                     <i class="fe fe-bookmark fe-16"></i>
                     <span class="ml-3 item-text">Bookmarks</span>
+                    <span id="bookmarksBadgeCount" class="badge badge-pill badge-warning">5</span>
                 </a>
             </li>
             <li class="nav-item dropdown {{activeTrackings}}">
@@ -74,12 +78,14 @@
                 <a href="/videos" class="nav-link">
                     <i class="fe fe-video fe-16"></i>
                     <span class="ml-3 item-text">Videos</span>
+                    <span id="videosBadgeCount" class="badge badge-pill badge-warning">6</span>
                 </a>
             </li>
             <li class="nav-item dropdown {{activeHighlights}}">
                 <a href="/highlights" class="nav-link">
                     <i class="fe fe-scissors fe-16"></i>
                     <span class="ml-3 item-text">Highlights</span>
+                    <span id="highlightsBadgeCount" class="badge badge-pill badge-warning">7</span>
                 </a>
             </li>
             <li class="nav-item dropdown {{activeWritings}}">
@@ -92,6 +98,7 @@
                 <a href="/todos" class="nav-link">
                     <i class="fe fe-list fe-16"></i>
                     <span class="ml-3 item-text">TODOs</span>
+                    <span id="todosBadgeCount" class="badge badge-pill badge-warning">8</span>
                 </a>
             </li>
             <li class="nav-item dropdown {{activeOneListToRuleThemAll}}">
@@ -109,3 +116,16 @@
         </div>
     </nav>
 </aside>
+
+<script>
+    $(document).ready(function () {
+        var result = ajaxCall('GET', "/menu-badge-counts", null, false, false);
+        $('#allBooksBadgeCount').text(result.allBookCount);
+        $('#myBooksBadgeCount').text(result.myBookCount);
+        $('#finishedBooksBadgeCount').text(result.finishedBookCount);
+        $('#bookmarksBadgeCount').text(result.bookmarkCount);
+        $('#todosBadgeCount').text(result.todosCount);
+        $('#videosBadgeCount').text(result.videosCount);
+        $('#highlightsBadgeCount').text(result.highlightsCount);
+    });
+</script>
